# jaackd

./: .gitignore  README.md  freecad-python-requirements.txt
Learning to See/: Appendix.md  Book.md  Chapter 1.md  Chapter 10.md  Chapter 13.md  Chapter 14.md  Chapter 16.md  Chapter 18.md  Chapter 21.md  Chapter 27.md  Chapter 4.md  Chapter 7.md  Epilogue.md  tmp.md
freecad/: README.md  activate_freecad_env.sh  developer-notebook.md  install.py  run_freecad.bat  start_debug.py
greenhouse/: .~lock.GreenhouseThermalModel.xlsx#  GreenhouseThermalModel.xlsx  create_greenhouse_spreadsheet.py
images/: jaackd-base.xcf
jaackd-utils-proj/: pyproject.toml
models/: 12V DC 540mA Solenoid.FCStd  12V DC Adapter Plug.20240426-231502.FCBak  12V DC Adapter Plug.FCStd  Buck Converter.20240426-231500.FCBak  Buck Converter.FCStd  CompartmentedContainer-container-3plug.3mf  CompartmentedContainer-container-3plug_0.4n_0.2mm_PLA_MK4SMMU3_2h9m.bgcode  CompartmentedContainer-container.3mf  CompartmentedContainer-container_0.4n_0.2mm_PLA_MK4SMMU3_4h4m.bgcode  CompartmentedContainer-plug.3mf  CompartmentedContainer-plug_0.4n_0.2mm_FLEX_MK4S_1h5m.bgcode  CompartmentedContainer-plug_0.4n_0.2mm_FLEX_MK4S_2h2m(2).bgcode  CompartmentedContainer-seal(4)_0.4n_0.2mm_FLEX_MK4S_5h13m.bgcode  CompartmentedContainer-seal(5).3mf  CompartmentedContainer-seal(5)_0.4n_0.2mm_FLEX_MK4S_6h23m.bgcode  CompartmentedContainer-seal.3mf  CompartmentedContainer-seal_0.4n_0.2mm_FLEX_MK4S_1h20m.bgcode  CompartmentedContainer.FCStd  CrocSee 12V DC Diaphragm Transfer Pump 1.3 LPM.20240427-004511.FCBak  (+30 more)
(+224 files in other folders)
